--- a/index.html
+++ b/index.html
@@ -1,19 +1,30 @@
 <!doctype html>
-
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-
   <title>National Parks</title>
   <meta name="description" content="All of the national parks">
   <meta name="author" content="Jess">
 
   <link rel="stylesheet" href="css/styles.css">
-
 </head>
 
 <body>
-    <h1>Hello</h1>
+  <nav id="navbar">
+    <a href="#parks">PARKS</a>
+    <a href="#facts">FACTS</a>
+    <a href="#map">MAP</a>
+  </nav>
+  <div class="hero-image">
+    <div class="hero-text">
+      <h1>Our National Parks</h1>
+    </div>
+  </div>
+
+  <h1>Our Parks</h1>
+
   <script src="js/scripts.js"></script>
 </body>
+
 </html>
