--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- REQUIREMENT: basic html -->
 <!doctype html>
 <html lang="en">
 
@@ -22,9 +23,14 @@
     </div>
   </div>
 
-  <h1>Our Parks</h1>
+  <section id="parks-section">
+    <h2>Our Parks</h2>
+    <ul id="parks"></ul>
+    <button id="park-button">Load More</button>
+  </section>
 
-  <script src="js/scripts.js"></script>
+
+  <script type="module" src="js/scripts.js"></script>
 </body>
 
 </html>
