--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 </head>
 
 <body>
-  <nav id="navbar">
-    <a href="#parks">PARKS</a>
-    <a href="#facts">FACTS</a>
-    <a href="#map">MAP</a>
-  </nav>
+
   <div class="hero-image">
+    <nav id="navbar">
+      <a href="#parks-section">PARKS</a>
+      <a href="#facts">FACTS</a>
+      <a href="#map">MAP</a>
+    </nav>
     <div class="hero-text">
       <h1>Our National Parks</h1>
     </div>
@@ -27,6 +28,34 @@
     <h2>Our Parks</h2>
     <ul id="parks"></ul>
     <button id="park-button">Load More</button>
+  </section>
+
+  <section id="facts">
+    <h2>Did you Know?</h2>
+    <ul>
+      <li>In the National Park System, there are 407 sites covering more than 84 million acres of land.</li>
+      <li>The Appalachian Trail is a 2,185 mile long public footpath that traverses the scenic, wooded, pastoral, wild,
+        and culturally resonant lands of the Appalachian Mountains</li>
+      <li>The nation’s deepest cave is 1,593 ft deep in New Mexico at Carlsbad Caverns National Park.</li>
+      <li>Originally established by Congress as Hot Springs Reservation in 1832 and later becoming a national park in
+        1921, Hot Springs National Park represents the oldest protected area in the National Park System[5</li>
+      <li>In the National Park System there are: 124 historical parks or sites, 78 national monuments, 59 national
+        parks, 25 battlefields or military parks, 18 preserves, 18 recreational areas, 10 seashores, 4 parkways, 4
+        lakeshores and 2 reserves</li>
+      <li>Yosemite National Park supports more than 400 species of vertebrates including fish, amphibians, reptiles,
+        birds, and mammals.</li>
+      <li>There is 1 active volcano, thousands of petrified trees, and almost 300 waterfalls in Yellowstone National
+        Park.</li>
+      <li>Seneca Falls National Park in New York is the location of the First Women’s Right Conventions, where expanding
+        rights of women were discussed in the mid-19th century</li>
+      <li>The largest living things in the world are in National Parks: Sequoia trees and Alaskan brown bears (the
+        world’s largest living carnivores).</li>
+      <li>There are 27,000 historic and prehistoric structures preserved within the National Parks System.</li>
+    </ul>
+  </section>
+
+  <section id="map">
+    <img src="images/us-national-parks-map.jpg" />
   </section>
 
   <script type="module" src="js/scripts.js"></script>
